Add inforced HTTPS, fix db-transfer

--- a/config/nginx/sync-endpoint-https.conf
+++ b/config/nginx/sync-endpoint-https.conf
@@ -10,8 +10,10 @@ server {
     # Redirect HTTP -> HTTPS
 	error_page 497 https://$host:$server_port$request_uri;
 
-	ssl_certificate /com.nginx.ssl_certificate;
-	ssl_certificate_key /run/secrets/com.nginx.ssl_certificate_key;
+	ssl_certificate /etc/letsencrypt/live/odk.fr.to/fullchain.pem;
+#	ssl_certificate /com.nginx.ssl_certificate;
+	ssl_certificate_key /etc/letsencrypt/live/odk.fr.to/privkey.pem;
+#	ssl_certificate_key /run/secrets/com.nginx.ssl_certificate_key;
 
 	# use favicon from Sync Endpoint
 	location = /favicon.ico {
