--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,16 +22,6 @@ services:
       - ldap-network
     env_file:
       - ldap.env
-  frontend-db:
-    image: gcr.io/cloudsql-docker/gce-proxy:1.12
-    command: /cloud_sql_proxy -instances=$INSTANCE_NAME=tcp:0.0.0.0:5432
-    deploy:
-      replicas: 1
-    networks:
-      - frontend-db-network
-      - external-network
-    volumes:
-      - /.config:/root/.config
   db-transfer:
     image: odk/db-transfer
     deploy:
@@ -39,6 +29,7 @@ services:
     networks:
       - sync-network
       - frontend-db-network
+      - external-network
     env_file:
       - frontend-db.env
     secrets:
@@ -108,6 +99,8 @@ services:
         target: /etc/nginx/conf.d/default.conf
       - source: com.nginx.proxy_buffer.conf
         target: /etc/nginx/conf.d/proxy_buffer.conf
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
     # uncomment these after uncommenting the ones below in the root level
       # - com.nginx.ssl_certificate
     # secrets:
@@ -153,7 +146,7 @@ configs:
   org.opendatakit.sync-web-ui.application.properties:
     file: ./config/web-ui/application.properties
   com.nginx.sync-endpoint.conf:
-    file: ./config/nginx/sync-endpoint-http.conf
+    file: ./config/nginx/sync-endpoint-https.conf
   com.nginx.proxy_buffer.conf:
     file: ./config/nginx/proxy_buffer.conf
   # com.nginx.ssl_certificate:
